force-app/main/default/objects/Contact/fields/de__c.field-meta.xml
<CustomField>
    <fullName>de__c</fullName>
    <label>Description 5</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>