force-app/main/default/objects/Contact/fields/Description_6__c.field-meta.xml
<CustomField>
    <fullName>Description_6__c</fullName>
    <label>Description 6</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>