force-app/main/default/objects/Contact/fields/Description_7__c.field-meta.xml
<CustomField>
    <fullName>Description_7__c</fullName>
    <label>Description 7</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>