force-app/main/default/objects/Contact/fields/Last_conversation__c.field-meta.xml
<CustomField>
    <fullName>Last_conversation__c</fullName>
    <label>Last conversation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>