force-app/main/default/objects/Contact/fields/Paid_out_numbers__c.field-meta.xml
<CustomField>
    <fullName>Paid_out_numbers__c</fullName>
    <label>Paid out numbers</label>
    <type>TextArea</type>
</CustomField>