force-app/main/default/objects/Contact/fields/Phone_Check_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Phone_Check_Text_Area__c</fullName>
    <label>Phone Check Text Area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>