force-app/main/default/objects/Contact/fields/SSN_Number__c.field-meta.xml
<CustomField>
    <fullName>SSN_Number__c</fullName>
    <label>SSN Number</label>
    <type>TextArea</type>
</CustomField>