force-app/main/default/objects/Contact/recordTypes/Limited_Access.recordType-meta.xml
<RecordType>
    <fullName>Limited_Access</fullName>
    <active>true</active>
    <label>Limited Access</label>
</RecordType>