force-app/main/default/objects/Contact/recordTypes/Main_Contact.recordType-meta.xml
<RecordType>
    <fullName>Main_Contact</fullName>
    <active>true</active>
    <label>Main Contact</label>
</RecordType>